--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hi ellroy bo tai</title>
+    <title>hi ellroy ryan nsem</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">syg botai ka?</h2>
+        <h2 class="question">syg nsemboi ka?</h2>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/l4FGlYoiqQTxBsyGY/giphy.gif"/>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
